--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div>
             <!--lien-->
             <!--<a href="mettre le lien">nom du lien</a>-->
-            <a href="file:///C:/Users/Yacine/Desktop/site/index.html.txt">La petite fille </a>
+            <a href="https://deft-pudding-cd2046.netlify.app">La petite fille </a>
             <a href=""></a>
 
 
